src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT002.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    FixturePositionalArgs: my_fixture
  location:
    row: 14
    column: 1
  end_location:
    row: 14
    column: 25
  fix: ~
  parent: ~
- kind:
    FixturePositionalArgs: my_fixture
  location:
    row: 19
    column: 1
  end_location:
    row: 19
    column: 39
  fix: ~
  parent: ~

